# dev-trial

./: Makefile  README.md  dev-trial.code-workspace  package-lock.json  package.json
.github/workflows/: CI.yml
arena/: .env.example  README.md  package-lock.json  package.json
forge/: .env.example  README.md  package-lock.json  package.json
frontend/: .env.example  .prettierrc.cjs  README.md  next.config.ts  package-lock.json  package.json
server/: .env.example  README.md  pyproject.toml
server/app/agents/: constants.py  graph.py  state.py
server/app/agents/nodes/: file_generator.py  problem_generator.py  test_generator.py  triager.py
server/app/agents/tools/triager/: generate_file.py  generate_problem.py  generate_problem_description.py  generate_test.py
server/app/api/: main.py  routes.py
server/app/controllers/: challenges.py  clerk.py  files.py  grading.py  messages.py  metrics.py  problems.py  questions.py  test_cases.py
server/app/inference/: agents.py  constants.py  state.py
server/app/inference/agents/: evaluator.py
server/app/inference/prompts/: evaluator.py  file_generator.py  problem_generator.py  question_generator.py  test_generator.py  triager.py
server/app/models/: challenge.py  clerk.py  database.py  file.py  grading.py  message.py  messages.py  metric.py  problem.py  question.py  style.py  test_case.py
server/app/services/: challenges.py  clerk.py  files.py  grading.py  messages.py  metrics.py  problems.py  questions.py  test_cases.py
server/app/utils/: database.py  dependencies.py  docker_runner.py  llm.py  test_parser.py
(+175 files in other folders)
